# powersupply

hw/: .gitignore
hw/101001-powersupply/: 101001-powersupply.kicad_pcb  101001-powersupply.kicad_prl  101001-powersupply.kicad_pro  101001-powersupply.kicad_sch  display.kicad_sch  mcu.kicad_sch  project.kicad_sym  psu-external.kicad_sch  psu-internal.kicad_sch  usb-pd.kicad_sch
hw/101001-powersupply/project.pretty/: MountingHole_3.2mm_M3.kicad_mod  Texas_RYQ0021A_VQFN-21_P0.5mm_EP5.0x3.0mm.kicad_mod  WAGO-2604-1102.kicad_mod
sw/fw/: Cargo.toml  README.md  nvm_2pdo.h  nvm_basic.h
sw/fw/.cargo/: config.toml
sw/fw/src/: executor.rs  logger.rs  main.rs  serialnumber.rs  util.rs
sw/fw/src/bsp/: mod.rs  rev1.rs
sw/fw/src/drivers/: mod.rs
sw/fw/src/drivers/stusb4500/: hl.rs  ll.rs  mod.rs
sw/fw/src/drivers/tps55289/: ll.rs  mod.rs
sw/fw/src/executors/: mod.rs  thread.rs
sw/fw/src/systems/: config.rs  events.rs  mod.rs  net.rs  power_ext.rs  record.rs  stats.rs  storage.rs  usb_pd.rs  watchdog.rs
sw/fw/src/util/: statsbuffer.rs
